fix: broken style for solved post on timeline style design

--- a/static/style.less
+++ b/static/style.less
@@ -43,12 +43,9 @@ html .topic {
 
 .posts [component="post"][data-index="-1"].isSolved {
 	border-left: 8px solid @brand-success;
+	border-right: 1px solid @brand-success;
 	border-top: 1px solid @brand-success;
 	border-bottom: 1px solid @brand-success;
-	padding: 20px 20px 15px 20px;
-	margin-bottom: 25px;
-	margin-top: 0;
-	margin-left: -28px;
 
 	.necro-post {
 		display: none;
@@ -65,5 +62,13 @@ html .topic {
 	.bookmarked:before {
 		color: @brand-success;
 		content: "\f00c";
+	}
+}
+
+.posts.timeline > [component="post"].isSolved {
+	margin-left: calc(2.5rem - 3.5px);
+
+	> div:not(.content) {
+		margin-left: calc(-2.5rem - 3.5px);
 	}
 }
